--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -12,4 +12,6 @@ MKL_G: shader/shader.o ; g++ drivers/mkl_graphics.cpp $(FLAGS) -I$(MKLHOME)/incl
 
 OCL_G: shader/shader.o; g++ drivers/ocl_graphics.cpp $(FLAGS) $(GL_FLAGS) $(OBJ) -o OCLconjGrad -lOpenCL -lclAmdBlas -I/opt/AMDAPP/include/ -I/opt/clAmdBlas-1.10.321/include/  -L/opt/clAmdBlas-1.10.321/lib64/ -L/opt/AMDAPP/lib/x86_64/ -lm
 
+BENCHMARK: shader/shader.o ; g++ drivers/benchmarkdriver.cpp $(FLAGS) -I$(MKLHOME)/include $(MKL_LINK) $(GL_FLAGS) $(OBJ) -lOpenCL -lclAmdBlas -I/opt/AMDAPP/include/ -I/opt/clAmdBlas-1.10.321/include/  -L/opt/clAmdBlas-1.10.321/lib64/ -L/opt/AMDAPP/lib/x86_64/ -o benchmarkUtil
+
 shader.o: shader/shader.cpp ; g++ -c shader/shader.cpp -o shader/shader.o
